--- a/delegate/Base.lproj/Main.storyboard
+++ b/delegate/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,104 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="delegate" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aF5-UY-SgM">
+                                <rect key="frame" x="20" y="337" width="374" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="li3-Pa-QQb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fw4-eS-PL1">
+                                <rect key="frame" x="147" y="467" width="120" height="40"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="CQZ-Gd-fM0"/>
+                                    <constraint firstAttribute="width" constant="120" id="Oy2-xF-pp2"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Click">
+                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="clickPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9WH-ut-75P"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="0.99953407049999998" green="0.98835557699999999" blue="0.47265523669999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Fw4-eS-PL1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8ow-w2-VVk"/>
+                            <constraint firstItem="Fw4-eS-PL1" firstAttribute="top" secondItem="aF5-UY-SgM" secondAttribute="bottom" constant="80" id="EjL-Fk-PuI"/>
+                            <constraint firstItem="aF5-UY-SgM" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="293" id="PfX-Gw-5I7"/>
+                            <constraint firstItem="aF5-UY-SgM" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="WSa-nF-Nwn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aF5-UY-SgM" secondAttribute="trailing" constant="20" id="ais-Yb-HWu"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="textName" destination="aF5-UY-SgM" id="gH4-t5-GjD"/>
+                        <segue destination="7nA-YC-3Pm" kind="show" identifier="goToSecondVC" id="9Qw-hy-9cw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="18.840579710144929" y="97.767857142857139"/>
+        </scene>
+        <!--Second View Controller-->
+        <scene sceneID="dpl-oi-5mt">
+            <objects>
+                <viewController id="7nA-YC-3Pm" customClass="SecondViewController" customModule="delegate" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1mP-hM-pel">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YLt-eI-x4O">
+                                <rect key="frame" x="20" y="337" width="374" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="8s8-Xq-fLs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Zk-VE-VMd">
+                                <rect key="frame" x="147" y="467" width="120" height="40"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="gjN-n4-hPJ"/>
+                                    <constraint firstAttribute="height" constant="40" id="xOv-ag-nRb"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Back">
+                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="backButton:" destination="7nA-YC-3Pm" eventType="touchUpInside" id="efR-nS-O3w"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="dqE-EO-Cjr"/>
+                        <color key="backgroundColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="YLt-eI-x4O" firstAttribute="leading" secondItem="dqE-EO-Cjr" secondAttribute="leading" constant="20" id="0AJ-Ra-SiQ"/>
+                            <constraint firstItem="1Zk-VE-VMd" firstAttribute="top" secondItem="YLt-eI-x4O" secondAttribute="bottom" constant="80" id="95x-Nk-tjX"/>
+                            <constraint firstItem="1Zk-VE-VMd" firstAttribute="centerX" secondItem="1mP-hM-pel" secondAttribute="centerX" id="C6q-cc-qTO"/>
+                            <constraint firstItem="YLt-eI-x4O" firstAttribute="top" secondItem="dqE-EO-Cjr" secondAttribute="top" constant="293" id="pP1-m5-YTE"/>
+                            <constraint firstItem="dqE-EO-Cjr" firstAttribute="trailing" secondItem="YLt-eI-x4O" secondAttribute="trailing" constant="20" id="sKU-HA-Rie"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="Txr-lo-9re"/>
+                    <connections>
+                        <outlet property="newTextName" destination="YLt-eI-x4O" id="LB0-ZW-icX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e5o-c0-kng" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="699" y="98"/>
         </scene>
     </scenes>
 </document>
